// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> renders with 5 pages with 18 items 1`] = `
<div
  className="PaginationStyles-aduuar-0 ewJsCc"
  data-test="pagination"
>
  <SideEffect(Head)>
    <Head />
  </SideEffect(Head)>
  <Link
    href={
      Object {
        "pathname": "items",
        "query": Object {
          "page": 0,
        },
      }
    }
    prefetch={true}
  >
    <a
      aria-disabled={true}
      className="prev"
      href="items?page=0"
      onClick={[Function]}
    >
      ← Prev
    </a>
  </Link>
  <p>
    Page 
    1
     of 
    <span
      className="totalPages"
    >
      5
    </span>
  </p>
  <p>
    18
     Items Total
  </p>
  <Link
    href={
      Object {
        "pathname": "items",
        "query": Object {
          "page": 2,
        },
      }
    }
    prefetch={true}
  >
    <a
      aria-disabled={false}
      className="next"
      href="items?page=2"
      onClick={[Function]}
    >
      Next →
    </a>
  </Link>
</div>
`;

exports[`<Pagination /> renders with only 1 item 1`] = `
<div
  className="PaginationStyles-aduuar-0 ewJsCc"
  data-test="pagination"
>
  <SideEffect(Head)>
    <Head />
  </SideEffect(Head)>
  <Link
    href={
      Object {
        "pathname": "items",
        "query": Object {
          "page": 0,
        },
      }
    }
    prefetch={true}
  >
    <a
      aria-disabled={true}
      className="prev"
      href="items?page=0"
      onClick={[Function]}
    >
      ← Prev
    </a>
  </Link>
  <p>
    Page 
    1
     of 
    <span
      className="totalPages"
    >
      1
    </span>
  </p>
  <p>
    1
     Items Total
  </p>
  <Link
    href={
      Object {
        "pathname": "items",
        "query": Object {
          "page": 2,
        },
      }
    }
    prefetch={true}
  >
    <a
      aria-disabled={true}
      className="next"
      href="items?page=2"
      onClick={[Function]}
    >
      Next →
    </a>
  </Link>
</div>
`;
